# maybe-owned

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTORS.md  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: regestry.rs  registry.rs
src/: lib.rs  serde_impls.rs  transitive_impl.rs
