[package]
name = "maybe-owned"
version = "0.4.0"
authors = [
	"Philipp Korber <philipp@korber.dev>",
]
description = "provides a `MaybeOwned` (and `MaybeOwnedMut`) type similar to std's `Cow` but it implements `From<T>` and `From<&'a T>` and does not require `ToOwned`"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustonaut/maybe-owned"
readme = "./README.md"
categories = []
keywords = [
    "maybe", "owned", "Cow"
]

[features]
unstable-transitive-ops-implementations = []

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
serde = { version = "1", optional = true }

[dev-dependencies]
serde_json = "1"
serde_derive = "1"
